--- a/acme_project/templates/birthday/birthday_list.html
+++ b/acme_project/templates/birthday/birthday_list.html
@@ -4,7 +4,7 @@
 {% block content %}
   {% for birthday in page_obj %}
     <div class="row">
-      <div class="col-2">  
+      <div class="col-2">
         {% if birthday.image %}
           <img src="{{ birthday.image.url }}" height="100" alt="">
         {% endif %}
@@ -17,12 +17,25 @@
           <a href="{% url 'birthday:detail' birthday.id %}">Сколько до дня рождения?</a>
         </div>
         <div>
-          <a href="{% url 'birthday:edit' birthday.id %}">Изменить запись</a> | <a href="{% url 'birthday:delete' birthday.id %}">Удалить запись</a>
-        </div>
+        {% with all_tags=birthday.tags.all %}
+          {% if all_tags %}
+            {{ 'all_tags|join:", "|lower|capfirst' }}
+            пользователя {{ birthday.author.username }}
+          {% endif %}
+        {% endwith %}
+      </div>
+        {% if birthday.author == user %}
+          <div>
+            <a href="{% url 'birthday:edit' birthday.id %}">
+              Изменить запись
+            </a> | <a href="{% url 'birthday:delete' birthday.id %}">Удалить запись</a>
+          </div>
+        {% endif %}
       </div>
       {% if not forloop.last %}
         <hr class="mt-3"> 
       {% endif %}
+    </div>
     </div>
   {% endfor %}
 
